hphp/hack/test/typecheck/inout/bad_inout_decl_parent3.php
<?hh

class C1 {
  public function foo(inout int $x): void {}
}

class C2 extends C1 {
  public function foo(int &$x): void {}
}
